Home response gap fix

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -18,6 +18,7 @@
 
     @media (max-width: 767px) {
         grid-template-columns: 1fr 1fr;
+        gap: 1rem;
     }
 
     >a {
